test/cases/pos/0048b_callst_undecl.ul
fn sum int x, int y => {
  return x + y;
}

sum x, y;
