test/cases/neg/0227_arg_global.ul
fn func int x => return;

// x is function parameter, should not be globally visible
int y = x;
